@@ -1,6 +1,9 @@
 V0.0.4 (2016-xx-xx):
 ====================
 
+* New features:
+  * Pass event source reference to event handlers to allow query/change
+    of source parameters when handling the event.
 * Bugfixes:
   * Packaging: unowned directory after purge, see
     https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=832347
